src/objects/copadovsm__Value_Stream_Map__c.object
<CustomObject>
    <description>Value Stream Map is a highly-regarded way of visualizing the way a team collaborates to deliver valuable work to end users, and to expose waste and bottlenecks in that process.</description>
    <fields>
        <fullName>copadovsm__Activation_Datetime__c</fullName>
        <label>Value Stream Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadovsm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Activating your Value Stream Map will kick off the Event Collection process. Activate your VSM to begin collecting data.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadovsm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadovsm__Excluded_Criteria__c</fullName>
        <label>Excluded Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadovsm__Last_Execution_Datetime__c</fullName>
        <description>Last ValueStreamMapFieldHistoryBatch class execution date time</description>
        <label>Last Execution Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadovsm__Object__c</fullName>
        <inlineHelpText>Primary object that will be used for the Value Stream Map. Each VSM will have a primary object and primary field.</inlineHelpText>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadovsm__Operator_Field__c</fullName>
        <inlineHelpText>This field identifies the primary owner field related to your Primary object. This feeds into the Operator icons within the VSM which shows work distribution and also the Interactive icons to show who owns the work item records.</inlineHelpText>
        <label>Operator Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadovsm__Primary_Field__c</fullName>
        <inlineHelpText>The Primary Field can be any field from the Primary Object associated with your VSM. The values from the Primary Field should define your business process for your Primary Object. The Primary Field will be utilized in the Configuration screen of the VSM.</inlineHelpText>
        <label>Primary Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadovsm__Recalculation_Status__c</fullName>
        <label>Recalculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Calculating</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadovsm__Record_Types__c</fullName>
        <inlineHelpText>Record types are associated with the Primary Object selected. These are the record types that should be included in Value Stream Map configuration.</inlineHelpText>
        <label>Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadovsm__Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Value Stream Map</label>
    <listViews>
        <fullName>copadovsm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Stream Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>